# platform.external.crosvm

./: .gitignore  Android.bp  Cargo.toml  OWNERS.android  TEST_MAPPING  all2android.sh  android-fork-stats.sh  android-merge-1-setup.sh  android-merge-2-cargo-embargo.sh  cargo2android.json  cargo2android_defaults.bp  cargo2android_module.bp.patch  cargo_embargo.json  merge-setup.sh  run_c2a.sh  run_cargo_embargo.sh
aarch64/: Android.bp  Cargo.toml  cargo2android.json
acpi_tables/: Android.bp
android_audio/: Android.bp
anti_tamper/: Android.bp
arch/: Android.bp  Cargo.toml  cargo2android.json  cargo2android_gdb.bp.patch
argh_helpers/: Android.bp  Cargo.toml
audio_util/: Android.bp
base/: Android.bp  Cargo.toml  cargo2android.json
base_tokio/: Android.bp
bit_field/: Android.bp
broker_ipc/: Android.bp
crash_report/: Android.bp  Cargo.toml
cros_async/: Android.bp  Cargo.toml
cros_fdt/: Android.bp
cros_tracing/: Android.bp
cros_tracing_types/: Android.bp
crosvm_cli/: Android.bp
crosvm_control/: Android.bp  cargo2android.bp.patch
cuttlefish/: Android.bp  crosvm_musl
devices/: Android.bp  Cargo.toml  cargo2android.json  cargo2android_libs.bp.patch
disk/: Android.bp  cargo2android.json
ext2/: Android.bp
fuse/: Android.bp
fuzz/: Cargo.toml
gpu_display/: Android.bp  cargo2android.bp  cargo2android.json
hypervisor/: Android.bp  Cargo.toml  cargo2android.json
io_uring/: Android.bp  cargo2android.json
jail/: Android.bp
kvm/: Android.bp
metrics/: Android.bp  Cargo.toml  build.rs  cargo2android.json
metrics/src/: lib.rs
(+208 files in other folders)
